fix: Gallery card button spacing, fixed download dropdown

--- a/src/components/GalleryCard/style.css
+++ b/src/components/GalleryCard/style.css
@@ -31,21 +31,19 @@
 }
 
 .actionList {
-    display: inline;
+    display: flex;
     flex-direction: row;
-    gap: 4px;
     margin-top: 6px;
     margin-bottom: 10px;
-    margin-left: auto;
 }
 
 .actionList button {
     border: none;
-    border-right: 1px solid white;
     border-radius: 0;
     background-color: transparent;
     height: inherit;
     color: white;
+    padding: 2px 10px;
 }
 
 .actionList a {
@@ -56,8 +54,10 @@
     padding-left: 0;
 }
 
-.actionList button:last-of-type {
-    border-right: none;
+.actionList button:not(:last-of-type),
+.actionList button:not(:last-of-type):hover {
+    border-right: 1px solid white;
+    border-color: white !important;
 }
 
 .title {
